--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i">
 <link rel="stylesheet" href="css/style.css">
 <link rel="shortcut icon" href="images/marumitsu.ico">
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/style.js"></script>
 </head>
 
