--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic">
+<link rel="stylesheet" href="css/font.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i">
 <link rel="stylesheet" href="css/style.css">
 <link rel="shortcut icon" href="images/marumitsu.ico">
